Dodanie opcji ukrycia zespołu